# nhengatu-constitution

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_pipeline.py  setup.py
config/: config.yaml
data/processed/: corpus_combined.nhe  corpus_sentences.nhe  merged_5028_pairs.json  sentence_pairs.json
experiments/01_word2vec/: analyze_results.py  train_word2vec.py
experiments/02_fasttext/: corpus_clean.json  corpus_clean.nhe  corpus_merged.json  corpus_merged.nhe  explore.py  explore_clean.py  merge_corpora.py  train.py
experiments/03_crosslingual/: align_vecmap.py  eval_finetuned.py  final_results.txt  finetune_xlmr.py  sentence_retrieval.py  sentence_retrieval_updated.py  sentence_retrieval_xlmr.py  sentence_retrieval_xlmr_clean.py
experiments/05_visualization/: plot_semantic_spaces.py
experiments/06_typological_analysis/: compare_por_yrl.py
experiments/results/: word2vec_analysis.json
notebooks/colab/: demo.ipynb  finetune_xlmr.ipynb
scripts/: analyze_corpus.py  analyze_output.py  bm25_exact_split.py  check_lengths.py  por_yrl_comparison.tsv  quick_test.py  run_pipeline.py  run_sentence_pipeline.py
sentence_output/: corpus_sentences.nhe  corpus_sentences_filtered.nhe  sentence_pairs.json  sentence_pairs.tsv  sentence_pairs_conf1.tsv  sentence_pairs_filtered.tsv  train.nhe
src/corpus_pipeline/: __init__.py  __main__.py  align.py  clean.py  cli.py  config.py  experiments.py  export.py  extract.py  filter_corpus.py  frontmatter.py  (+6 more)
tests/: conftest.py  test_clean.py  test_frontmatter.py  test_segment.py  test_sentence_split.py
(+2 files in other folders)
