[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "corpus-pipeline"
version = "0.1.0"
description = "Portuguese–Nheengatu parallel corpus pipeline for the Brazilian Constitution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0",
    "pdfplumber>=0.11",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
corpus-pipeline = "corpus_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
